[gd_scene load_steps=10 format=3 uid="uid://cno6psg38v6ph"]

[ext_resource type="Script" path="res://Script/Level.gd" id="1_grugo"]
[ext_resource type="PackedScene" uid="uid://dqujjvkyrihhj" path="res://Scenes/background.tscn" id="2_0lj03"]
[ext_resource type="PackedScene" uid="uid://bn3v6pr4ix326" path="res://Scenes/camera.tscn" id="2_ygeoa"]
[ext_resource type="Texture2D" uid="uid://bjw2i2nmumdck" path="res://Assets/Background/black_ground.png" id="6_3fvu7"]
[ext_resource type="PackedScene" uid="uid://bbiaj5jm3hha8" path="res://Scenes/tree_layer.tscn" id="6_wc6u0"]
[ext_resource type="Texture2D" uid="uid://mivrjf8e0j5j" path="res://Assets/GO.png" id="7_ww3ft"]
[ext_resource type="AudioStream" uid="uid://ceigg31x4rauo" path="res://Assets/SFX/mixkit-game-ball-tap-2073.wav" id="8_133lp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8w23k"]
bg_color = Color(0.298039, 0.192157, 0.341176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_we8dn"]
bg_color = Color(0, 0.592157, 0.494118, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_grugo")

[node name="Background" parent="." instance=ExtResource("2_0lj03")]
position = Vector2(800, 440)

[node name="TreeLayer" parent="." instance=ExtResource("6_wc6u0")]
position = Vector2(78, 520)

[node name="Camera" parent="." instance=ExtResource("2_ygeoa")]
z_index = 20

[node name="ProgressBar" type="ProgressBar" parent="Camera"]
offset_left = -540.0
offset_top = -395.0
offset_right = 540.0
offset_bottom = -365.0
theme_override_styles/background = SubResource("StyleBoxFlat_8w23k")
theme_override_styles/fill = SubResource("StyleBoxFlat_we8dn")

[node name="SideBorders" type="Node2D" parent="Camera"]
position = Vector2(-640, -420)

[node name="BlackBorder" type="Sprite2D" parent="Camera/SideBorders"]
z_index = 50
position = Vector2(-100, 420)
scale = Vector2(10, 50)
texture = ExtResource("6_3fvu7")

[node name="BlackBorder2" type="Sprite2D" parent="Camera/SideBorders"]
z_index = 50
position = Vector2(1380, 420)
scale = Vector2(10, 50)
texture = ExtResource("6_3fvu7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.001
one_shot = true

[node name="GO!" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(670, 420)
scale = Vector2(3, 3)
texture = ExtResource("7_ww3ft")

[node name="ClickSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_133lp")
volume_db = 5.0
pitch_scale = 0.3

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
